--- a/ui/common/variables.inc.styl
+++ b/ui/common/variables.inc.styl
@@ -32,9 +32,9 @@ $draw-color = #f39800
 $table-padding-h = 10px
 
 // Fonts
-$primary-font-family = "Open Sans", "PingFang SC", "Seravek", "Segoe UI", "Verdana", "Hiragino Sans GB", "Lantinghei SC", "Microsoft Yahei", "WenQuanYi Micro Hei", "sans"
-$header-font-family = "Open Sans", "PingFang SC", "Seravek", "Segoe UI", "Verdana", "Lantinghei SC", "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", "sans-serif"
-$code-font-family = "monaco", "Source Code Pro", "Consolas", "Courier New", "monospace"
+$primary-font-family = "Open Sans", "Seravek", "Segoe UI", "Verdana", "PingFang SC", "Hiragino Sans GB", "Lantinghei SC", "Microsoft Yahei", "WenQuanYi Micro Hei", "sans"
+$header-font-family = "Open Sans", "Seravek", "Segoe UI", "Verdana", "PingFang SC", "Lantinghei SC", "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", "sans-serif"
+$code-font-family = "monaco", "Source Code Pro", "Consolas", "Lucida Console", "monospace"
 
 // Notification
 $notification-color = {
