hideId defaults to true

--- a/ui/templates/user_settings.html
+++ b/ui/templates/user_settings.html
@@ -29,6 +29,7 @@
           <option value="true"{% if udoc.settings.hideId === true %} selected{% endif %}>Hide</option>
           <option value="false"{% if udoc.settings.hideId !== true %} selected{% endif %}>Public</option>
         </select>
+        <p class="help-text">Whether to publicize your student ID in submission detail page.</p>
       </div>
     </div>
     <div class="row">
