update dependency and others

--- a/ui/templates/scoreboard.html
+++ b/ui/templates/scoreboard.html
@@ -56,7 +56,7 @@
             </tr>
           </thead>
           <tbody>
-          {%- for rdoc in sbdoc %}
+          {%- for rdoc in sbdoc %}{% if not rdoc.udoc.profile.initial %}
             <tr>
               <td class="col--rank">#{{ rdoc.rank }}</td>
               <td class="col--user"><div layout="row center-start">
@@ -94,7 +94,7 @@
               {%- endif %}
               </td>
             </tr>
-          {%- endfor %}
+          {% endif %}{%- endfor %}
           </tbody>
         </table>
       </div>
