--- a/ui/templates/user_profile.html
+++ b/ui/templates/user_profile.html
@@ -5,13 +5,6 @@
     <h1 class="section__title">My Profile</h1>
   </div>
   <div class="section__body"><form method="post">
-  {%- if udoc.profile.initial %}
-    <div class="typo">
-      <blockquote class="note">
-        You are required to fill in your personal information before continuing.
-      </blockquote>
-    </div>
-  {%- endif %}
   {%- if req.query.updated !== undefined %}
     <div class="typo">
       <blockquote class="success">
@@ -21,22 +14,21 @@
   {%- endif %}
     <div class="row">
       <div class="medium-5 columns">
+        <label>Display Name (required)</label>
+        <input type="text" name="displayName" class="textbox" value="{{ udoc.profile.displayName }}" required>
+        <p class="help-text">Will be displayed <span class="text-red">publicly</span> in scoreboard.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="medium-5 columns">
         <label>Student ID</label>
         <input type="text" name="studentId" class="textbox" readonly value="{{ udoc.profile.studentId }}">
       </div>
     </div>
     <div class="row">
       <div class="medium-5 columns">
-        <label>Real Name (required)</label>
-        <input type="text" name="realName" class="textbox" autofocus value="{{ udoc.profile.realName }}" required>
-        <p class="help-text">Your real name is only visible to TAs. Others will not know who you are.</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="medium-5 columns">
-        <label>Display Name (required)</label>
-        <input type="text" name="displayName" class="textbox" value="{{ udoc.profile.displayName }}" required>
-        <p class="help-text">Will be displayed <span class="text-red">publicly</span> in scoreboard.</p>
+        <label>Real Name</label>
+        <input type="text" name="realName" class="textbox" readonly value="{{ udoc.profile.realName }}">
       </div>
     </div>
     <div class="row">
