add more badges

--- a/ui/pages/scoreboard.page.styl
+++ b/ui/pages/scoreboard.page.styl
@@ -43,3 +43,9 @@
 
   .badge-green
     background: oc-green-3
+
+  .badge-green
+    background: oc-green-3
+
+  .badge-yellow
+    background: oc-yellow-3
