Update board of ui

--- a/ui/components/board/board.page.styl
+++ b/ui/components/board/board.page.styl
@@ -32,6 +32,8 @@
 
   &.active
     background: lighten(red, 85%)
+  &.after-active
+    background: lighten(green, 85%)
 
   .stone
     width: 80%
