--- a/ui/templates/partials/nav.html
+++ b/ui/templates/partials/nav.html
@@ -1,7 +1,7 @@
 <nav class="nav slideout-menu" id="menu">
   <div class="row"><div class="columns nav__container">
     <ol class="nav__container-item">
-      <li><a href="{{ url('/') }}" class="nav__logo">reversi~</a></li>
+      <li><a href="{{ url('/') }}" class="nav__logo">mak-yek~</a></li>
       <li><a href="{{ url('/') }}" class="nav__item{% if nav_type == 'scoreboard' %} active{% endif %}">Scoreboard</a></li>
       <li><a href="{{ url('/submission') }}" class="nav__item{% if nav_type == 'submission' %} active{% endif %}">Submission</a></li>
     </ol>
