--- a/ui/templates/partials/footer.html
+++ b/ui/templates/partials/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
   <div class="supplementary">
-    Copyright 2016~2017 <a href="https://github.com/sse2017-reversi-fun">ReversiFun</a> and its contributors. Licensed under AGPL.
+    Copyright 2020~2021 <a href="https://github.com/next-makyek/makyek-portal">Next-Makyek</a> and its contributors. Licensed under AGPL.
   </div>
 </div>
