--- a/ui/templates/partials/footer.html
+++ b/ui/templates/partials/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
   <div class="supplementary">
-    Copyright 2020~2021 <a href="https://github.com/next-makyek/makyek-portal">Next-Makyek</a> and its contributors. Licensed under AGPL.
+    Copyright 2020~2022 <a href="https://github.com/makyek-ng/makyek-portal">makyek-ng</a> and its contributors. Licensed under AGPL.
   </div>
 </div>
